# incubyte-assessment

./: .flake8  .gitignore  README.md  conftest.py  pyproject.toml
apps/api/: models.py  serializers.py  services.py  urls.py  views.py
apps/api/migrations/: 0001_initial.py
apps/api/tests/: test_employees.py  test_salary_calculations.py  test_salary_metrics.py
config/: settings.py  urls.py
